force-app/main/default/objects/Account/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Cidade da organização.</description>
    <label>Cidade</label>
    <type>TextArea</type>
</CustomField>