force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Nome do estado por extenso</description>
    <label>Estado</label>
    <type>TextArea</type>
</CustomField>