force-app/main/default/objects/Account/fields/Partido__c.field-meta.xml
<CustomField>
    <fullName>Partido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partido</label>
    <referenceTo>Partido__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>