force-app/main/default/objects/Account/fields/Populacao__c.field-meta.xml
<CustomField>
    <fullName>Populacao__c</fullName>
    <label>População</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>