force-app/main/default/objects/Account/fields/Prefeito__c.field-meta.xml
<CustomField>
    <fullName>Prefeito__c</fullName>
    <label>Prefeito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>